--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,153 @@
-.App {
-  text-align: center;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "Century Gothic";
 }
 
-.App-logo {
-  height: 40vmin;
+body {
+  background-image: linear-gradient(120deg, #f6d365, #fda085);
+  color: black;
+  font-family: "Century Gothic";
+  min-height: 100vh;
+}
+
+header {
+  font-size: 3rem;
+  font-weight: 700;
+  color: #222222;
+}
+h2 {
+  font-weight: normal;
+  color: #222222;
+  min-height: 2vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header,
+form {
+  min-height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form input,
+form button {
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  border: none;
+  background: #f7f7f7;
+}
+
+form button {
+  background-color: #f7f7f7;
+  color: #f6d365;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+form button:hover {
+  background-color: #f6d365;
+  color: #f7f7f7;
+}
+
+.todo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-list {
+  min-width: 30%;
+  list-style: none;
+  overflow: hidden;
+}
+
+.todo {
+  margin: 0.5rem;
+  background: #f7f7f7;
+  color: black;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  transition: all 0.5s;
+}
+
+.todo-item {
+  padding: 0.5rem;
+}
+
+.todo li {
+  flex: 1;
+}
+.trash-btn,
+.complete-btn {
+  padding: 1rem;
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.complete-btn {
+  background-color: green;
+  color: #f7f7f7;
+}
+.trash-btn {
+  color: #f7f7f7;
+  background-color: red;
+}
+.trash-btn:hover {
+  color: red;
+  background-color: #f7f7f7;
+}
+.complete-btn:hover {
+  background-color: #f7f7f7;
+  color: green;
+}
+
+.fas {
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.completed {
+  text-decoration: line-through;
+  opacity: 0.5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.fall {
+  transform: translateX(50rem);
 }
 
-.App-link {
-  color: #61dafb;
+select {
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+  color: #c53209;
+  border: none;
+  width: 10rem;
+  cursor: pointer;
+  padding: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.select {
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.select::after {
+  content: "\25bc";
+  position: absolute;
+  color: #f54a1a;
+  top: 0;
+  right: 0;
+  padding: 1rem;
+  pointer-events: none;
+  transition: all 0.2s;
+}
+
+.select:hover::after {
+  transform: rotate(180deg);
 }
